### Release v2.3

### New Features

* Path space regularization can now be used to render SDS paths with hybrid backward/forward path tracing

### Fixed Bugs

* None

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

**Note for Windows users:** you have to install the [Microsoft Visual C++ Redistributable
for Visual Studio 2017](https://aka.ms/vs/15/release/vc_redist.x64.exe).