@@ -3,6 +3,7 @@
 ### New Features
 
 * Path space regularization can now be used to render SDS paths with hybrid backward/forward path tracing
+* LuxCoreUI now shows eye and light pass counters if light tracing is enabled
 
 ### Fixed Bugs
 
